fix(channel-web): disable typing animations to prevent flicker

--- a/modules/channel-web/assets/default.css
+++ b/modules/channel-web/assets/default.css
@@ -871,13 +871,11 @@ body {
 }
 
 /* IE10+ CSS styles go here */
-/*@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .typingGroup {
-    .typingBubble {
-      animation: initial;
-    }
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .bpw-typing-bubble {
+    animation: none;
   }
-}*/
+}
 
 /**ANIMATIONS */
 
